--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 body {
-  font-family: 'Ubuntu', sans-serif;
+  font-family: 'Open Sans', sans-serif;
+  font-stretch: ultra-condensed;
   padding: 20px 60px;
 }
 
