--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,13 @@
 body {
   font-family: 'Open Sans', sans-serif;
-  font-stretch: ultra-condensed;
   padding: 20px 60px;
 }
 
 a {
   text-decoration: none;
   color: black;
+}
+
+* {
+  box-sizing: border-box;
 }
