--- a/src/components/custom-button/custom-button.styles.scss
+++ b/src/components/custom-button/custom-button.styles.scss
@@ -2,14 +2,13 @@
   min-width: 165px;
   width: auto;
   height: 50px;
-  letter-spacing: 0.5px;
   line-height: 50px;
-  padding: 0 35px 0 35px;
-  font-size: 15px;
+  padding: 0 30px 0 30px;
+  font-size: 14px;
   background-color: black;
   color: white;
   text-transform: uppercase;
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'Open Sans';
   font-weight: bolder;
   border: none;
   cursor: pointer;
@@ -18,5 +17,15 @@
     background-color: white;
     color: black;
     border: 1px solid black;
+  }
+
+  &.google-sign-in {
+    background-color: #4285f4;
+    color: white;
+
+    &:hover {
+      background-color: #357ae8;
+      border: none;
+    }
   }
 }
